--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     ]
   },
   "dependencies": {
+    "material-ui": "^0.20.2",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
