--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "material-ui": "^0.20.2",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-router-dom": "^4.3.1"
   }
 }
