--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-messenger",
   "version": "1.0.0",
   "description": "Training project for GeekBrains",
+
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -52,7 +53,10 @@
     "material-ui": "^0.20.2",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-addons-update": "^15.6.2",
     "react-dom": "^16.8.6",
-    "react-router-dom": "^4.3.1"
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.3.1",
+    "redux": "^3.7.2"
   }
 }
